--- a/mvcproject/appsettings.json
+++ b/mvcproject/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-QNPGK84\\SQLEXPRESS;Database=MvcProject;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;encrypt=false",
-
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=mvcproject;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
